src/objects/Development_Defect__c.object
<CustomObject>
    <description>CloudSymphony Log for Development Defects logged by Users</description>
    <fields>
        <fullName>Defect__c</fullName>
        <label>Defect</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expect_Results__c</fullName>
        <label>Expect Results</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <label>Raised By</label>
        <picklist>
            <picklistValues>
                <fullName>Angela Jones</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auston O&apos;Hara</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo Leftly-Gynn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Helen Johnston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Janet Burke</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Janet Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jim Sanders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Julie Phillips</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerry Smith</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louise Markham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lynn Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Object__c</fullName>
        <label>Related Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Comments__c</fullName>
        <label>Status Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Identified</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won&apos;t Fix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Development Defect</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Raised_By__c</columns>
        <columns>Related_Object__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Development Defect No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Development Defects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>